logs/django-bitcoin.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_bitcoin'...
Compiling './lib/python3.5/site-packages/django_bitcoin/BCAddressField.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/BCAddressField.py", line 48
    long_value = 0L
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_bitcoin/currency.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/currency.py", line 150
    print "Unexpected error:", sys.exc_info()[0]
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_bitcoin/jsonrpc'...
Listing './lib/python3.5/site-packages/django_bitcoin/management'...
Listing './lib/python3.5/site-packages/django_bitcoin/management/commands'...
Compiling './lib/python3.5/site-packages/django_bitcoin/management/commands/CheckDbIntegrity.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/management/commands/CheckDbIntegrity.py", line 23
    print "Total received, sum", bitcoinaddress_sum
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_bitcoin/management/commands/CheckTransactions.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/management/commands/CheckTransactions.py", line 25
    print "starting...", time() - start_time
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_bitcoin/management/commands/FixLastBalancesConcurrency.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/management/commands/FixLastBalancesConcurrency.py", line 15
    print "starting..."
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_bitcoin/management/commands/GetHistoricalRates.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/management/commands/GetHistoricalRates.py", line 21
    print datetime.datetime.now(), get_historical_price()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_bitcoin/migrations'...
Compiling './lib/python3.5/site-packages/django_bitcoin/models.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/models.py", line 114
    print "refilling queue...", bp
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_bitcoin/pywallet.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/pywallet.py", line 746
    _p = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEFFFFFC2FL
                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_bitcoin/templates'...
Listing './lib/python3.5/site-packages/django_bitcoin/templatetags'...
Compiling './lib/python3.5/site-packages/django_bitcoin/templatetags/currency_conversions.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/templatetags/currency_conversions.py", line 95
    except NoReverseMatch,e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_bitcoin/utils.py'...
***   File "./lib/python3.5/site-packages/django_bitcoin/utils.py", line 72
    print address_from
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_bitcoin-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
